--- a/src/Lsp/Lsp.csproj
+++ b/src/Lsp/Lsp.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+    <PackageReference Include="Serilog" Version="2.5.0" />
     <PackageReference Include="System.ValueTuple" Version="4.3.0" />
     <ProjectReference Include="..\JsonRpc\JsonRpc.csproj" />
   </ItemGroup>
